--- a/apps/climathon-ma/src/app/home/home.component.html
+++ b/apps/climathon-ma/src/app/home/home.component.html
@@ -52,7 +52,7 @@
           {{ lastResult.measurements.windspeed | number }}km/h
         </span>
         <mat-icon aria-hidden="false">
-          {{ trend(lastResult.measurements.history.windspeed) }} <</mat-icon
+          {{ trend(lastResult.measurements.history.windspeed) }} </mat-icon
         >
       </div>
       <div>
